Fixed responsiveness of footer table (so now it wraps on small screens

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1017,7 +1017,7 @@ footer table {
     /*color: #272822;*/
     color: #eeeeee;
     font-size: 14px;
-    width: 340px;
+    width: 360px;
 }
 
 footer table th {
